# tauri-plugin-accent-color

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: main.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Button.svelte
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_accent_color.toml
permissions/schemas/: schema.json
src/: color.rs  commands.rs  lib.rs  notification.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
