[package]
name = "tauri-plugin-accent-color"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-accent-color"

[dependencies]
tauri = { version = "2.0.0-beta.11" }
serde = "1.0"
thiserror = "1.0"
cocoa = "0.25.0"
objc = "0.2.7"
block = "0.1.6"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.9", features = ["build"] }
